--- a/lm_eval/tasks/super_glue_diagnostics/super_glue_diagnostics.yaml
+++ b/lm_eval/tasks/super_glue_diagnostics/super_glue_diagnostics.yaml
@@ -2,9 +2,8 @@ task: social_iqa
 dataset_path: social_i_qa
 dataset_name: null
 output_type: multiple_choice
-training_split: train
-validation_split: validation
-doc_to_text: "Q: {{context}} {{question}}\nA:"
+test_split: test
+doc_to_text: "Premise: {{Premise}} \nHypothesis: {{Hypothesis}}\nA:"
 target_delimiter: " "
 doc_to_choice: "{{[answerA, answerB, answerC]}}"
 doc_to_target: "{{ (label|int) - 1 }}"
