--- a/lm_eval/tasks/lm_pragmatics/coherence_seed_0.yaml
+++ b/lm_eval/tasks/lm_pragmatics/coherence_seed_0.yaml
@@ -1,3 +1,3 @@
-task: lm_pragamtics_coherence_seed_0
+task: lm_pragmatics_coherence_seed_0
 test_split: seed_0
-include: _coherence_template
+include: _coherence_template_yaml
