--- a/lm_eval/tasks/super_glue_reimplemented/copa.yaml
+++ b/lm_eval/tasks/super_glue_reimplemented/copa.yaml
@@ -1,6 +1,6 @@
 tag:
-  - superglue
-task: superglue_copa_reimplemented
+  - super_glue_reimplemented
+task: super_glue_copa_reimplemented
 dataset_path: super_glue
 dataset_name: copa
 output_type: multiple_choice
