--- a/lm_eval/tasks/super_glue_reimplemented/rte.yaml
+++ b/lm_eval/tasks/super_glue_reimplemented/rte.yaml
@@ -1,6 +1,6 @@
 tag:
-  - superglue
-task: superglue_rte_reimplemented
+  - super_glue
+task: super_glue_rte_reimplemented
 dataset_path: super_glue
 dataset_name: rte
 output_type: multiple_choice
