feat: added the possibility to consider subtasks as well for the correlation

--- a/lm_eval/tasks/super_glue_reimplemented/wic.yaml
+++ b/lm_eval/tasks/super_glue_reimplemented/wic.yaml
@@ -1,5 +1,4 @@
-tag:
-  - super_glue_reimplemented
+tag: super_glue_reimplemented
 task: super_glue_wic_reimplemented
 dataset_path: super_glue
 dataset_name: wic
