--- a/lm_eval/tasks/super_glue_reimplemented/_superglue.yaml
+++ b/lm_eval/tasks/super_glue_reimplemented/_superglue.yaml
@@ -1,4 +1,6 @@
-group: super_glue_reimplemented
+group: super_glue_v2
+task:
+  - super_glue_reimplemented
 aggregate_metric_list:
   - metric: acc
     weight_by_size: True
