--- a/lm_eval/tasks/super_glue_reimplemented/boolq.yaml
+++ b/lm_eval/tasks/super_glue_reimplemented/boolq.yaml
@@ -1,5 +1,4 @@
-tag:
-  - super_glue_reimplemented
+tag: super_glue_reimplemented
 task: super_glue_boolq_reimplemented
 dataset_path: super_glue
 dataset_name: boolq
