--- a/lm_eval/tasks/super_glue_reimplemented/copa.yaml
+++ b/lm_eval/tasks/super_glue_reimplemented/copa.yaml
@@ -1,14 +1,13 @@
-tag:
-  - super_glue_reimplemented
+tag: super_glue_reimplemented
 task: super_glue_copa_reimplemented
 dataset_path: super_glue
 dataset_name: copa
 output_type: multiple_choice
 training_split: train
 validation_split: validation
-doc_to_text: !function utils.doc_to_text
-doc_to_target: !function utils_copa.doc_to_target_copa
-doc_to_choice: !function utils_copa.doc_to_choice_copa
+doc_to_text: !function utils_copa.doc_to_text
+doc_to_target: !function utils_copa.doc_to_target
+doc_to_choice: !function utils_copa.doc_to_choice
 metric_list:
   - metric: acc
 metadata:
