--- a/lm_eval/tasks/super_glue_reimplemented/record.yaml
+++ b/lm_eval/tasks/super_glue_reimplemented/record.yaml
@@ -1,16 +1,15 @@
-tag:
-  - super_glue
+tag: super_glue_reimplemented
 task: super_glue_record_reimplemented
 dataset_path: super_glue
 dataset_name: record
 output_type: multiple_choice
 training_split: train
 validation_split: validation
-doc_to_text: !function util.doc_to_text
+doc_to_text: !function utils_record.doc_to_text
 doc_to_target: !function utils_record.doc_to_target
 doc_to_choice: !function utils_record.doc_to_choice
-process_docs: !function util.process_docs
-process_results: !function util.process_results
+process_docs: !function utils_record.process_docs
+process_results: !function utils_record.process_results
 metric_list:
   - metric: f1
     aggregation: mean
