--- a/lm_eval/tasks/super_glue_reimplemented/wsc.yaml
+++ b/lm_eval/tasks/super_glue_reimplemented/wsc.yaml
@@ -1,5 +1,4 @@
-tag:
-  - super_glue
+tag: super_glue_reimplemented
 task: super_glue_wsc_reimplemented
 dataset_path: super_glue
 dataset_name: wsc.fixed
