--- a/lm_eval/tasks/fantom/fantom_full_belief_choice.yaml
+++ b/lm_eval/tasks/fantom/fantom_full_belief_choice.yaml
@@ -1,11 +1,12 @@
 dataset_path: clembench-playpen/fantom
 dataset_name: full_belief_choice
 task: fantom_full_belief_choice
-output_type: multiple_choice
+output_type: generate_until
 test_split: inaccessible
 doc_to_text: "{{input_text}}"
 doc_to_choice: !function utils.doc_to_choices
 doc_to_target: "{{correct_answer}}"
+process_results: !function utils.process_results_belief_choice
 metric_list:
   - metric: acc
 
