--- a/lm_eval/tasks/fantom/fantom_short_belief_choice.yaml
+++ b/lm_eval/tasks/fantom/fantom_short_belief_choice.yaml
@@ -6,6 +6,7 @@ test_split: inaccessible
 doc_to_text: "{{input_text}}"
 doc_to_choice: !function utils.doc_to_choices
 doc_to_target: "{{correct_answer}}"
+process_results: !function utils.process_results_belief_choice
 metric_list:
   - metric: acc
 
