--- a/tasks/super_glue_reimplemented/multirc.yaml
+++ b/tasks/super_glue_reimplemented/multirc.yaml
@@ -10,6 +10,6 @@ doc_to_text: "{{paragraph}}\nQuestion: {{question}}\nAnswer:"
 doc_to_target: label
 doc_to_choice: "['''{{answer}}\\nIs the answer correct? yes''', '''{{answer}}\\nIs the answer correct? no''']"
 metric_list:
-  - metric: acc
+  - metric: f1
 metadata:
   version: 2.0
