--- a/lm_eval/tasks/fantom/fantom_full_belief_gen.yaml
+++ b/lm_eval/tasks/fantom/fantom_full_belief_gen.yaml
@@ -7,6 +7,6 @@ doc_to_text: "{{input_text}}"
 doc_to_target: "{{correct_answer}}"
 process_results: !function utils.process_results_belief_gen
 metric_list:
-  - metric: f1
+  - metric: acc
     aggregation: mean
     higher_is_better: true
