--- a/lm_eval/tasks/fantom/fantom_full_answerability_binary.yaml
+++ b/lm_eval/tasks/fantom/fantom_full_answerability_binary.yaml
@@ -4,6 +4,8 @@ task: fantom_full_answerability_binary
 output_type: generate_until
 test_split: inaccessible
 doc_to_text: "{{input_text}}"
+generation_kwargs:
+  max_new_tokens: 365
 doc_to_target: !function utils.doc_to_target_binary
 process_results: !function utils.process_results_binary
 metric_list:
