--- a/lm_eval/tasks/fantom/fantom_full_fact.yaml
+++ b/lm_eval/tasks/fantom/fantom_full_fact.yaml
@@ -6,6 +6,8 @@ test_split: test
 doc_to_text: "{{input_text}}"
 doc_to_target: "{{correct_answer}}"
 process_results: !function utils.process_results_f1
+generation_kwargs:
+  max_new_tokens: 365
 metric_list:
   - metric: f1
     aggregation: mean
