--- a/lm_eval/tasks/fantom/fantom_short_answerability_binary.yaml
+++ b/lm_eval/tasks/fantom/fantom_short_answerability_binary.yaml
@@ -6,6 +6,8 @@ test_split: inaccessible
 doc_to_text: "{{input_text}}"
 doc_to_target: !function utils.doc_to_target_binary
 process_results: !function utils.process_results_binary
+generation_kwargs:
+  max_new_tokens: 365
 metric_list:
   - metric: acc
 
