--- a/lm_eval/tasks/xstorycloze/default_ar.yaml
+++ b/lm_eval/tasks/xstorycloze/default_ar.yaml
@@ -3,7 +3,7 @@ dataset_path: juletxara/xstory_cloze
 dataset_name: ar
 output_type: multiple_choice
 training_split: train
-validation_split: eval
+validation_split: evaluate
 doc_to_text: "{{[input_sentence_1, input_sentence_2, input_sentence_3, input_sentence_4]|join(' ')}}"
 doc_to_target: "{{answer_right_ending-1}}"
 doc_to_choice: "{{[sentence_quiz1, sentence_quiz2]}}"
