--- a/lm_eval/tasks/simpletom/behavior-qa.yaml
+++ b/lm_eval/tasks/simpletom/behavior-qa.yaml
@@ -6,9 +6,8 @@ dataset_name: behavior-qa
 output_type: multiple_choice
 validation_split: test
 doc_to_text: !function utils.doc_to_text
-target_delimiter: " "
 doc_to_choice: !function utils.doc_to_choice
-doc_to_target: "{{answerKey}}"
+doc_to_target: !function utils.doc_to_target
 metric_list:
   - metric: acc
     aggregation: mean
