--- a/lm_eval/tasks/natural_planning/travel_planning_0shot.yaml
+++ b/lm_eval/tasks/natural_planning/travel_planning_0shot.yaml
@@ -1,18 +1,26 @@
 tag: 
   - natural_planning
-task: travel-planning
+task: travel-planning-0shot
 dataset_path: clembench-playpen/natural-plan-travel
 output_type: generate_until
 validation_split: default
 num_fewshot: 0
 doc_to_text: prompt_0shot
 doc_to_target: golden_plan
-process_results: !function metrics.travel_planning_accuracy
+process_results: !function metrics_travel.travel_planning_accuracy
 metric_list:
   - metric: acc
     aggregation: mean
     higher_is_better: true
 generation_kwargs:
-  temperature: 0
+  do_sample: false
+  min_new_tokens: 90 # minimum #tokens in gold plan = 87 
+  max_new_tokens: 350 # maximum #tokens in gold plan = 290
+  early_stopping: false
+  until: 
+    - '<|eot_id|>'
+    - '<|im_end|>'
+    - '<|endoftext|>'
+
 metadata:
   version: 1.0
