--- a/lm_eval/tasks/natural_plan/calendar_scheduling_0shot.yaml
+++ b/lm_eval/tasks/natural_plan/calendar_scheduling_0shot.yaml
@@ -1,13 +1,13 @@
-tag:
-  - natural_planning_0shot
-task: travel-planning-0shot
-dataset_path: clembench-playpen/natural-plan-travel
+tag: 
+  - natural_plan_0shot
+task: calendar-scheduling-0shot
+dataset_path: clembench-playpen/natural-plan-calendar
 output_type: generate_until
 validation_split: default
 num_fewshot: 0
 doc_to_text: prompt_0shot
 doc_to_target: golden_plan
-process_results: !function metrics_travel.travel_planning_accuracy
+process_results: !function metrics_calendar.calendar_planning_accuracy
 metric_list:
   - metric: acc
     aggregation: mean
@@ -22,6 +22,5 @@ generation_kwargs:
     - '<|im_end|>'
     - '<|endoftext|>'
 
-  temperature: 0
 metadata:
   version: 1.0
