--- a/lm_eval/tasks/natural_plan/meeting_planning_0shot.yaml
+++ b/lm_eval/tasks/natural_plan/meeting_planning_0shot.yaml
@@ -1,5 +1,5 @@
 tag: 
-  - natural_planning_0shot
+  - natural_plan_0shot
 task: meeting-planning-0shot
 dataset_path: clembench-playpen/natural-plan-meeting
 output_type: generate_until
