--- a/lm_eval/tasks/cladder/cladder.yaml
+++ b/lm_eval/tasks/cladder/cladder.yaml
@@ -7,7 +7,7 @@ doc_to_text: "You are an expert in causal inference. The following question is n
 doc_to_target: label
 process_results: !function utils.process_results
 generation_kwargs:
-  max_new_tokens: 10
+  max_gen_toks: 10
 metric_list:
   - metric: acc
     aggregation: mean
